clang/test/BSC/Trait/r1/definition_17.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int foo(This* this);
};

trait F* get() {
  int a = 1;
  return &a; // expected-error {{pointer type which has implemented 'trait F' or 'trait F*' is expected, but get 'int' here}}
};

int main() {
  trait F* f = get();
  return 0;
}
